# automl-shap-agent

./: LICENSE  README.md  agent.py  pyproject.toml  requirements.txt
agModels-Class/: learner.pkl  metadata.json
agModels-Class/models/: trainer.pkl
agModels-Class/models/KNeighborsDist_BAG_L1/: model.pkl
agModels-Class/models/KNeighborsDist_BAG_L1/S1F1/: model.pkl
agModels-Class/models/KNeighborsUnif_BAG_L1/: model.pkl
agModels-Class/models/KNeighborsUnif_BAG_L1/S1F1/: model.pkl
agModels-Class/models/LightGBMXT_BAG_L1/: model.pkl
agModels-Class/models/LightGBMXT_BAG_L1/S1F1/: model.pkl
agModels-Class/models/LightGBMXT_BAG_L1/S1F2/: model.pkl
agModels-Class/models/LightGBMXT_BAG_L1/S1F3/: model.pkl
agModels-Class/models/LightGBMXT_BAG_L1/S1F4/: model.pkl
agModels-Class/models/LightGBMXT_BAG_L1/S1F5/: model.pkl
agModels-Class/models/LightGBMXT_BAG_L1/S1F6/: model.pkl
agModels-Class/models/LightGBMXT_BAG_L1/S1F7/: model.pkl
agModels-Class/models/LightGBMXT_BAG_L1/S1F8/: model.pkl
agModels-Class/models/LightGBM_BAG_L1/: model.pkl
agModels-Class/models/LightGBM_BAG_L1/S1F1/: model.pkl
agModels-Class/models/LightGBM_BAG_L1/S1F2/: model.pkl
agModels-Class/models/LightGBM_BAG_L1/S1F3/: model.pkl
agModels-Class/models/LightGBM_BAG_L1/S1F4/: model.pkl
agModels-Class/models/NeuralNetFastAI_BAG_L1/: model.pkl
agModels-Class/models/NeuralNetFastAI_BAG_L2/: model.pkl
agModels-Class/models/WeightedEnsemble_L2/: model.pkl
agModels-Class/models/WeightedEnsemble_L3/: model.pkl
datasets/iris/: iris_excel.xlsx
shap-values/: shap_values.pkl
(+36 files in other folders)
